--- a/backend/SVD/movie.ipynb
+++ b/backend/SVD/movie.ipynb
@@ -29,7 +29,8 @@
    ],
    "source": [
     "ratings = pd.read_csv('./input/ratings_small.csv')\n",
-    "ratings.head()"
+    "ratings.head()\n",
+    "# Lecture du fichier CSV"
    ]
   },
   {
@@ -38,7 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_item = ratings.groupby(['userId', 'movieId'])['rating'].first().unstack(fill_value=0.0)"
+    "user_item = ratings.groupby(['userId', 'movieId'])['rating'].first().unstack(fill_value=0.0)\n",
+    "# Liaison de userId, movieId depuis le rating"
    ]
   },
   {
@@ -92,7 +94,8 @@
     }
    ],
    "source": [
-    "user_item.loc[42].sort_values(ascending=False).head()"
+    "user_item.loc[42].sort_values(ascending=False).head()\n",
+    "# Trie des valeur pour l'user_item 42"
    ]
   },
   {
@@ -101,7 +104,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "U, sigma, Vt = svds(user_item.to_numpy(), k=50)"
+    "U, sigma, Vt = svds(user_item.to_numpy(), k=50)\n",
+    "#U, sigma et VT sont des matrices\n",
+    "#svds décompose partiellement en valeurs singulières d'une matrice creuse.\n",
+    "\n"
    ]
   },
   {
@@ -146,7 +152,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sigma_diag_matrix=np.diag(sigma)"
+    "sigma_diag_matrix=np.diag(sigma)\n",
+    "# La méthode diag sert a créer / extraire une diagonale"
    ]
   },
   {
@@ -156,7 +163,9 @@
    "outputs": [],
    "source": [
     "all_user_predicted_ratings = np.dot(np.dot(U, sigma_diag_matrix), Vt)\n",
-    "preds_df = pd.DataFrame(all_user_predicted_ratings, columns = user_item.columns, index=user_item.index)"
+    "# Ici la variable all_user est un produit scalaire des matrices / diagonale, la methode dot est la pour\n",
+    "preds_df = pd.DataFrame(all_user_predicted_ratings, columns = user_item.columns, index=user_item.index)\n",
+    "# On crée un Dataframe"
    ]
   },
   {
